samples/_failures_safe/1761162424_dc8042_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37ed253a.c: In function ‘main’:
./samples/SAFE/__tmp_37ed253a.c:153:15: error: missing terminating " character
  153 |     if (scanf("%d
      |               ^~~
./samples/SAFE/__tmp_37ed253a.c:153:5: error: expected expression at end of input
  153 |     if (scanf("%d
      |     ^~
./samples/SAFE/__tmp_37ed253a.c:153:5: error: expected declaration or statement at end of input
